force-app/main/default/objects/Credit_Line__c/Credit_Line__c.object-meta.xml
<CustomObject>
    <description>Credit Lines will be added to the Client page and displayed on the Client Plan.</description>
    <label>Credit Line</label>
    <nameField>
        <displayFormat>CL-{000}</displayFormat>
        <label>Credit Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Lines</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>