force-app/main/default/objects/Credit_Line__c/fields/Client_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Credit Lines</relationshipLabel>
    <relationshipName>Credit_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>