force-app/main/default/objects/Credit_Line__c/fields/Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit__c</fullName>
    <description>Total Credit Limit of the Facilty on this Client - provide the details as recorded in Adaptive</description>
    <inlineHelpText>Total Credit Limit of the Facilty on this Client - provide the details as recorded in Adaptive</inlineHelpText>
    <label>Credit Limit</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>