force-app/main/default/objects/Credit_Line__c/fields/Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date__c</fullName>
    <description>The date at which the specific limit expires for the Client</description>
    <inlineHelpText>The date at which the specific limit expires for the Client</inlineHelpText>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>