force-app/main/default/objects/Credit_Line__c/fields/Limit_Measure__c.field-meta.xml
<CustomField>
    <fullName>Limit_Measure__c</fullName>
    <description>The type of exposure that the limit covers. This is an Adaptiv identifier of measures</description>
    <inlineHelpText>The type of exposure that the limit covers</inlineHelpText>
    <label>Limit Measure</label>
    <length>50</length>
    <type>Text</type>
</CustomField>