force-app/main/default/objects/Credit_Line__c/fields/Limit_Portfolio__c.field-meta.xml
<CustomField>
    <fullName>Limit_Portfolio__c</fullName>
    <description>Adaptiv cube reference used to breakdown limit information. Salesforce is required to show Issuer, Customer and Facility Cube data only.</description>
    <inlineHelpText>Adaptiv cube reference used to breakdown limit information</inlineHelpText>
    <label>Limit Portfolio</label>
    <length>50</length>
    <type>Text</type>
</CustomField>