force-app/main/default/objects/Credit_Line__c/fields/Limit_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Limit_Reference_Number__c</fullName>
    <description>Unique reference for the Limit given to the Client which corresponds to the Utilisation</description>
    <inlineHelpText>Unique reference for the Limit given to the Client which corresponds to the Utilisation</inlineHelpText>
    <label>Limit Reference Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>