force-app/main/default/objects/Credit_Line__c/fields/Limit_Step_Number__c.field-meta.xml
<CustomField>
    <fullName>Limit_Step_Number__c</fullName>
    <description>This number should correspond to the related utilisation limit step number.</description>
    <inlineHelpText>Step number of a particular limit</inlineHelpText>
    <label>Limit Step Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>