force-app/main/default/objects/Credit_Line__c/fields/Limit_Tenor__c.field-meta.xml
<CustomField>
    <fullName>Limit_Tenor__c</fullName>
    <description>The tenor associated with the limit step number (e.g.0D). A single limit can have more than one Tenor</description>
    <inlineHelpText>The tenor associated with the limit step number (e.g.0D)</inlineHelpText>
    <label>Limit Tenor</label>
    <length>30</length>
    <type>Text</type>
</CustomField>