force-app/main/default/objects/Credit_Line__c/fields/Limit_Type__c.field-meta.xml
<CustomField>
    <fullName>Limit_Type__c</fullName>
    <description>The type of limit that is applicable. Salesforce is required to show Normal and Unlimited limit type data only.</description>
    <inlineHelpText>The type of limit that is applicable</inlineHelpText>
    <label>Limit Type</label>
    <length>60</length>
    <type>Text</type>
</CustomField>