force-app/main/default/objects/Credit_Line__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <description>Related Product on which we hold this Facility - provide the details as recorded in Adaptive</description>
    <inlineHelpText>Related Product on which we hold this Facility - provide the details as recorded in Adaptive</inlineHelpText>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>American Depository Receipt</fullName>
            </value>
            <value>
                <fullName>Bond Position</fullName>
            </value>
            <value>
                <fullName>Cape</fullName>
            </value>
            <value>
                <fullName>Commodities</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Debtor Finance</fullName>
            </value>
            <value>
                <fullName>Deposits Held</fullName>
            </value>
            <value>
                <fullName>Equity Position</fullName>
            </value>
            <value>
                <fullName>Financial Guarantee - Given</fullName>
            </value>
            <value>
                <fullName>Fleet Management Card</fullName>
            </value>
            <value>
                <fullName>Foreign Notes</fullName>
            </value>
            <value>
                <fullName>Forfaiting</fullName>
            </value>
            <value>
                <fullName>General Short Term Banking Facilities</fullName>
            </value>
            <value>
                <fullName>Guarantee - Inward</fullName>
            </value>
            <value>
                <fullName>LC</fullName>
            </value>
            <value>
                <fullName>Metal Lease</fullName>
            </value>
            <value>
                <fullName>Money Market</fullName>
            </value>
            <value>
                <fullName>Net Trading Positions</fullName>
            </value>
            <value>
                <fullName>Non-Disclosed Finance</fullName>
            </value>
            <value>
                <fullName>Payment Settlement</fullName>
            </value>
            <value>
                <fullName>Performance Guarantee - Given</fullName>
            </value>
            <value>
                <fullName>Residential Mortgage</fullName>
            </value>
            <value>
                <fullName>Risk Participation Agreement</fullName>
            </value>
            <value>
                <fullName>Risk Transfers</fullName>
            </value>
            <value>
                <fullName>Securities Financing</fullName>
            </value>
            <value>
                <fullName>Structured Loans</fullName>
            </value>
            <value>
                <fullName>TPFA Property Guarantee-Given</fullName>
            </value>
            <value>
                <fullName>Trading</fullName>
            </value>
            <value>
                <fullName>Vehicle And Asset Finance</fullName>
            </value>
            <value>
                <fullName>Working Capital Facilities</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>