force-app/main/default/objects/Credit_Line__c/fields/Snapshot_Date__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Date__c</fullName>
    <description>The snapshot date that the credit line is applicable for.  This is the date that the feed from Adaptiv is processed and displayed on the Client.</description>
    <inlineHelpText>The snapshot date that the credit line is applicable for.  This is the date that the feed from Adaptiv is processed and displayed on the Client.</inlineHelpText>
    <label>Snapshot Date</label>
    <type>Date</type>
</CustomField>