force-app/main/default/objects/Credit_Line__c/fields/Total_utilisation__c.field-meta.xml
<CustomField>
    <fullName>Total_utilisation__c</fullName>
    <description>Total utilisation of the Facility on this Client - provide the details as recorded in Adaptive</description>
    <inlineHelpText>Total utilisation of the Facility on this Client - provide the details as recorded in Adaptive</inlineHelpText>
    <label>Total Utilisation</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>