force-app/main/default/objects/Credit_Line__c/fields/Utilisation_Host__c.field-meta.xml
<CustomField>
    <fullName>Utilisation_Host__c</fullName>
    <description>Standard Bank balance sheet to which the limit has been booked</description>
    <inlineHelpText>Standard Bank balance sheet to which the limit has been booked</inlineHelpText>
    <label>Utilisation Host</label>
    <length>20</length>
    <type>Text</type>
</CustomField>