force-app/main/default/objects/Credit_Line__c/fields/Utilisation_Step_Number__c.field-meta.xml
<CustomField>
    <fullName>Utilisation_Step_Number__c</fullName>
    <description>This number should correspond to the related limit step number.</description>
    <inlineHelpText>Step number of a particular limit&apos;s utilisation</inlineHelpText>
    <label>Utilisation Step Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>