force-app/main/default/objects/Credit_Line__c/fields/Utilization_Tenor__c.field-meta.xml
<CustomField>
    <fullName>Utilization_Tenor__c</fullName>
    <description>Utilization Tenor received from Adaptiv</description>
    <label>Utilization Tenor</label>
    <length>30</length>
    <type>Text</type>
</CustomField>